--- a/.config
+++ b/.config
@@ -1599,7 +1599,7 @@ CONFIG_PACKAGE_htop=y
 # CONFIG_PACKAGE_monit is not set
 # CONFIG_PACKAGE_monit-nossl is not set
 # CONFIG_PACKAGE_muninlite is not set
-# CONFIG_PACKAGE_netdata is not set
+CONFIG_PACKAGE_netdata=y
 # CONFIG_PACKAGE_sudo is not set
 # CONFIG_PACKAGE_syslog-ng is not set
 
@@ -2101,7 +2101,7 @@ CONFIG_PACKAGE_kmod-ip6tables=y
 # CONFIG_PACKAGE_kmod-ipt-condition is not set
 CONFIG_PACKAGE_kmod-ipt-conntrack=y
 # CONFIG_PACKAGE_kmod-ipt-conntrack-extra is not set
-CONFIG_PACKAGE_kmod-ipt-conntrack-label=y
+# CONFIG_PACKAGE_kmod-ipt-conntrack-label is not set
 CONFIG_PACKAGE_kmod-ipt-core=y
 # CONFIG_PACKAGE_kmod-ipt-debug is not set
 # CONFIG_PACKAGE_kmod-ipt-delude is not set
@@ -2661,14 +2661,14 @@ CONFIG_PACKAGE_kmod-rt2x00-usb=y
 #
 # Lua
 #
-# CONFIG_PACKAGE_dkjson is not set
+CONFIG_PACKAGE_dkjson=y
 # CONFIG_PACKAGE_json4lua is not set
 # CONFIG_PACKAGE_ldbus is not set
 CONFIG_PACKAGE_libiwinfo-lua=y
 # CONFIG_PACKAGE_lpeg is not set
 # CONFIG_PACKAGE_lsqlite3 is not set
 CONFIG_PACKAGE_lua=y
-# CONFIG_PACKAGE_lua-bencode is not set
+CONFIG_PACKAGE_lua-bencode=y
 # CONFIG_PACKAGE_lua-cjson is not set
 # CONFIG_PACKAGE_lua-copas is not set
 # CONFIG_PACKAGE_lua-coxpcall is not set
@@ -2681,7 +2681,7 @@ CONFIG_PACKAGE_lua=y
 # CONFIG_PACKAGE_lua-penlight is not set
 # CONFIG_PACKAGE_lua-rings is not set
 # CONFIG_PACKAGE_lua-rs232 is not set
-# CONFIG_PACKAGE_lua-sha2 is not set
+CONFIG_PACKAGE_lua-sha2=y
 # CONFIG_PACKAGE_lua-wsapi-base is not set
 # CONFIG_PACKAGE_lua-wsapi-xavante is not set
 # CONFIG_PACKAGE_lua-xavante is not set
@@ -2695,7 +2695,7 @@ CONFIG_PACKAGE_lua=y
 # CONFIG_PACKAGE_luarocks is not set
 # CONFIG_PACKAGE_luasec is not set
 # CONFIG_PACKAGE_luasoap is not set
-# CONFIG_PACKAGE_luasocket is not set
+CONFIG_PACKAGE_luasocket=y
 # CONFIG_PACKAGE_luasql-mysql is not set
 # CONFIG_PACKAGE_luasql-pgsql is not set
 # CONFIG_PACKAGE_luasql-sqlite3 is not set
@@ -3860,26 +3860,26 @@ CONFIG_PACKAGE_libncurses=y
 CONFIG_PACKAGE_libnet-1.2.x=y
 # CONFIG_PACKAGE_libnetconf2 is not set
 # CONFIG_PACKAGE_libnetfilter-acct is not set
-CONFIG_PACKAGE_libnetfilter-conntrack=y
+# CONFIG_PACKAGE_libnetfilter-conntrack is not set
 # CONFIG_PACKAGE_libnetfilter-cthelper is not set
 # CONFIG_PACKAGE_libnetfilter-cttimeout is not set
 # CONFIG_PACKAGE_libnetfilter-log is not set
 # CONFIG_PACKAGE_libnetfilter-queue is not set
-CONFIG_PACKAGE_libnetsnmp=y
+# CONFIG_PACKAGE_libnetsnmp is not set
 CONFIG_PACKAGE_libnettle=y
 
 #
 # Configuration
 #
 # CONFIG_LIBNETTLE_MINI is not set
-CONFIG_PACKAGE_libnfnetlink=y
+# CONFIG_PACKAGE_libnfnetlink is not set
 CONFIG_PACKAGE_libnftnl=y
 CONFIG_PACKAGE_libnghttp2=y
 # CONFIG_PACKAGE_libnl is not set
-CONFIG_PACKAGE_libnl-core=y
-CONFIG_PACKAGE_libnl-genl=y
+# CONFIG_PACKAGE_libnl-core is not set
+# CONFIG_PACKAGE_libnl-genl is not set
 # CONFIG_PACKAGE_libnl-nf is not set
-CONFIG_PACKAGE_libnl-route=y
+# CONFIG_PACKAGE_libnl-route is not set
 CONFIG_PACKAGE_libnl-tiny=y
 # CONFIG_PACKAGE_libnopoll is not set
 # CONFIG_PACKAGE_libogg is not set
@@ -3967,7 +3967,7 @@ CONFIG_PACKAGE_libtasn1=m
 CONFIG_PACKAGE_libtirpc=m
 # CONFIG_PACKAGE_libtorrent is not set
 CONFIG_PACKAGE_libubox=y
-CONFIG_PACKAGE_libubox-lua=y
+# CONFIG_PACKAGE_libubox-lua is not set
 CONFIG_PACKAGE_libubus=y
 CONFIG_PACKAGE_libubus-lua=y
 CONFIG_PACKAGE_libuci=y
@@ -4094,7 +4094,7 @@ CONFIG_LUCI_LANG_zh-cn=y
 # CONFIG_LUCI_LANG_it is not set
 CONFIG_PACKAGE_luci-mod-admin-full=y
 # CONFIG_PACKAGE_luci-mod-failsafe is not set
-# CONFIG_PACKAGE_luci-mod-freifunk is not set
+CONFIG_PACKAGE_luci-mod-freifunk=y
 # CONFIG_PACKAGE_luci-mod-freifunk-community is not set
 # CONFIG_PACKAGE_luci-mod-rpc is not set
 
@@ -4122,7 +4122,7 @@ CONFIG_PACKAGE_luci-app-autoreboot=y
 # CONFIG_PACKAGE_luci-app-bmx7 is not set
 # CONFIG_PACKAGE_luci-app-cifs-mount is not set
 # CONFIG_PACKAGE_luci-app-cifsd is not set
-# CONFIG_PACKAGE_luci-app-cjdns is not set
+CONFIG_PACKAGE_luci-app-cjdns=y
 # CONFIG_PACKAGE_luci-app-clamav is not set
 # CONFIG_PACKAGE_luci-app-commands is not set
 # CONFIG_PACKAGE_luci-app-cshark is not set
@@ -4143,9 +4143,9 @@ CONFIG_PACKAGE_luci-app-diskman=y
 CONFIG_PACKAGE_luci-app-filetransfer=y
 CONFIG_PACKAGE_luci-app-firewall=y
 CONFIG_PACKAGE_luci-app-flowoffload=y
-# CONFIG_PACKAGE_luci-app-freifunk-diagnostics is not set
-# CONFIG_PACKAGE_luci-app-freifunk-policyrouting is not set
-# CONFIG_PACKAGE_luci-app-freifunk-widgets is not set
+CONFIG_PACKAGE_luci-app-freifunk-diagnostics=y
+CONFIG_PACKAGE_luci-app-freifunk-policyrouting=y
+CONFIG_PACKAGE_luci-app-freifunk-widgets=y
 # CONFIG_PACKAGE_luci-app-frpc is not set
 # CONFIG_PACKAGE_luci-app-frps is not set
 # CONFIG_PACKAGE_luci-app-fwknopd is not set
@@ -4267,7 +4267,7 @@ CONFIG_PACKAGE_luci-proto-ppp=y
 CONFIG_PACKAGE_luci-lib-ip=y
 # CONFIG_PACKAGE_luci-lib-iptparser is not set
 # CONFIG_PACKAGE_luci-lib-jquery-1-4 is not set
-# CONFIG_PACKAGE_luci-lib-json is not set
+CONFIG_PACKAGE_luci-lib-json=y
 CONFIG_PACKAGE_luci-lib-jsonc=y
 # CONFIG_PACKAGE_luci-lib-luaneightbl is not set
 CONFIG_PACKAGE_luci-lib-nixio=y
@@ -4276,9 +4276,10 @@ CONFIG_PACKAGE_luci-lib-nixio=y
 #
 # 9. Freifunk
 #
-# CONFIG_PACKAGE_freifunk-common is not set
-# CONFIG_PACKAGE_freifunk-firewall is not set
-# CONFIG_PACKAGE_freifunk-policyrouting is not set
+CONFIG_PACKAGE_freifunk-common=y
+# CONFIG_PACKAGE_community-profiles is not set
+CONFIG_PACKAGE_freifunk-firewall=y
+CONFIG_PACKAGE_freifunk-policyrouting=y
 # CONFIG_PACKAGE_freifunk-watchdog is not set
 # CONFIG_PACKAGE_meshwizard is not set
 CONFIG_PACKAGE_default-settings=y
@@ -4397,6 +4398,56 @@ CONFIG_PACKAGE_luci-i18n-filetransfer-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-firewall-zh-cn=y
 # CONFIG_PACKAGE_luci-i18n-firewall-zh-tw is not set
 CONFIG_PACKAGE_luci-i18n-flowoffload-zh-cn=y
+# CONFIG_PACKAGE_luci-i18n-freifunk-ca is not set
+# CONFIG_PACKAGE_luci-i18n-freifunk-cs is not set
+# CONFIG_PACKAGE_luci-i18n-freifunk-de is not set
+# CONFIG_PACKAGE_luci-i18n-freifunk-el is not set
+# CONFIG_PACKAGE_luci-i18n-freifunk-en is not set
+# CONFIG_PACKAGE_luci-i18n-freifunk-es is not set
+# CONFIG_PACKAGE_luci-i18n-freifunk-fr is not set
+# CONFIG_PACKAGE_luci-i18n-freifunk-he is not set
+# CONFIG_PACKAGE_luci-i18n-freifunk-hu is not set
+# CONFIG_PACKAGE_luci-i18n-freifunk-it is not set
+# CONFIG_PACKAGE_luci-i18n-freifunk-ja is not set
+# CONFIG_PACKAGE_luci-i18n-freifunk-ms is not set
+# CONFIG_PACKAGE_luci-i18n-freifunk-no is not set
+# CONFIG_PACKAGE_luci-i18n-freifunk-pl is not set
+# CONFIG_PACKAGE_luci-i18n-freifunk-policyrouting-ca is not set
+# CONFIG_PACKAGE_luci-i18n-freifunk-policyrouting-cs is not set
+# CONFIG_PACKAGE_luci-i18n-freifunk-policyrouting-de is not set
+# CONFIG_PACKAGE_luci-i18n-freifunk-policyrouting-el is not set
+# CONFIG_PACKAGE_luci-i18n-freifunk-policyrouting-en is not set
+# CONFIG_PACKAGE_luci-i18n-freifunk-policyrouting-es is not set
+# CONFIG_PACKAGE_luci-i18n-freifunk-policyrouting-fr is not set
+# CONFIG_PACKAGE_luci-i18n-freifunk-policyrouting-he is not set
+# CONFIG_PACKAGE_luci-i18n-freifunk-policyrouting-hu is not set
+# CONFIG_PACKAGE_luci-i18n-freifunk-policyrouting-it is not set
+# CONFIG_PACKAGE_luci-i18n-freifunk-policyrouting-ja is not set
+# CONFIG_PACKAGE_luci-i18n-freifunk-policyrouting-ms is not set
+# CONFIG_PACKAGE_luci-i18n-freifunk-policyrouting-no is not set
+# CONFIG_PACKAGE_luci-i18n-freifunk-policyrouting-pl is not set
+# CONFIG_PACKAGE_luci-i18n-freifunk-policyrouting-pt is not set
+# CONFIG_PACKAGE_luci-i18n-freifunk-policyrouting-pt-br is not set
+# CONFIG_PACKAGE_luci-i18n-freifunk-policyrouting-ro is not set
+# CONFIG_PACKAGE_luci-i18n-freifunk-policyrouting-ru is not set
+# CONFIG_PACKAGE_luci-i18n-freifunk-policyrouting-sk is not set
+# CONFIG_PACKAGE_luci-i18n-freifunk-policyrouting-sv is not set
+# CONFIG_PACKAGE_luci-i18n-freifunk-policyrouting-tr is not set
+# CONFIG_PACKAGE_luci-i18n-freifunk-policyrouting-uk is not set
+# CONFIG_PACKAGE_luci-i18n-freifunk-policyrouting-vi is not set
+CONFIG_PACKAGE_luci-i18n-freifunk-policyrouting-zh-cn=y
+# CONFIG_PACKAGE_luci-i18n-freifunk-policyrouting-zh-tw is not set
+# CONFIG_PACKAGE_luci-i18n-freifunk-pt is not set
+# CONFIG_PACKAGE_luci-i18n-freifunk-pt-br is not set
+# CONFIG_PACKAGE_luci-i18n-freifunk-ro is not set
+# CONFIG_PACKAGE_luci-i18n-freifunk-ru is not set
+# CONFIG_PACKAGE_luci-i18n-freifunk-sk is not set
+# CONFIG_PACKAGE_luci-i18n-freifunk-sv is not set
+# CONFIG_PACKAGE_luci-i18n-freifunk-tr is not set
+# CONFIG_PACKAGE_luci-i18n-freifunk-uk is not set
+# CONFIG_PACKAGE_luci-i18n-freifunk-vi is not set
+CONFIG_PACKAGE_luci-i18n-freifunk-zh-cn=y
+# CONFIG_PACKAGE_luci-i18n-freifunk-zh-tw is not set
 # CONFIG_PACKAGE_luci-i18n-hd-idle-ca is not set
 # CONFIG_PACKAGE_luci-i18n-hd-idle-cs is not set
 # CONFIG_PACKAGE_luci-i18n-hd-idle-de is not set
@@ -4716,10 +4767,9 @@ CONFIG_PACKAGE_wget=y
 CONFIG_PACKAGE_ip6tables=y
 # CONFIG_PACKAGE_ip6tables-extra is not set
 # CONFIG_PACKAGE_ip6tables-mod-nat is not set
-# CONFIG_PACKAGE_ip6tables-nft is not set
 CONFIG_PACKAGE_iptables=y
-CONFIG_IPTABLES_CONNLABEL=y
-CONFIG_IPTABLES_NFTABLES=y
+# CONFIG_IPTABLES_CONNLABEL is not set
+# CONFIG_IPTABLES_NFTABLES is not set
 # CONFIG_PACKAGE_iptables-mod-account is not set
 # CONFIG_PACKAGE_iptables-mod-chaos is not set
 # CONFIG_PACKAGE_iptables-mod-checksum is not set
@@ -4727,7 +4777,6 @@ CONFIG_IPTABLES_NFTABLES=y
 # CONFIG_PACKAGE_iptables-mod-clusterip is not set
 # CONFIG_PACKAGE_iptables-mod-condition is not set
 # CONFIG_PACKAGE_iptables-mod-conntrack-extra is not set
-CONFIG_PACKAGE_iptables-mod-conntrack-label=y
 # CONFIG_PACKAGE_iptables-mod-delude is not set
 # CONFIG_PACKAGE_iptables-mod-dhcpmac is not set
 # CONFIG_PACKAGE_iptables-mod-dnetmap is not set
@@ -4763,7 +4812,6 @@ CONFIG_PACKAGE_iptables-mod-tproxy=y
 # CONFIG_PACKAGE_iptables-mod-trace is not set
 # CONFIG_PACKAGE_iptables-mod-u32 is not set
 # CONFIG_PACKAGE_iptables-mod-ulog is not set
-# CONFIG_PACKAGE_iptables-nft is not set
 # CONFIG_PACKAGE_iptaccount is not set
 # CONFIG_PACKAGE_iptgeoip is not set
 # CONFIG_PACKAGE_miniupnpc is not set
@@ -5012,7 +5060,7 @@ CONFIG_V2RAY_DISABLE_NONE=y
 # CONFIG_PACKAGE_bird2cl is not set
 # CONFIG_PACKAGE_bmx6 is not set
 # CONFIG_PACKAGE_bmx7 is not set
-# CONFIG_PACKAGE_cjdns is not set
+CONFIG_PACKAGE_cjdns=y
 # CONFIG_PACKAGE_cjdns-tests is not set
 # CONFIG_PACKAGE_dcwapd is not set
 # CONFIG_PACKAGE_devlink is not set
@@ -5360,14 +5408,14 @@ CONFIG_PACKAGE_uhttpd-mod-ubus=y
 #
 # wireless
 #
-CONFIG_PACKAGE_dynapoint=y
+# CONFIG_PACKAGE_dynapoint is not set
 # CONFIG_PACKAGE_horst is not set
 # CONFIG_PACKAGE_kismet-client is not set
 # CONFIG_PACKAGE_kismet-drone is not set
 # CONFIG_PACKAGE_kismet-server is not set
 # CONFIG_PACKAGE_pixiewps is not set
 # CONFIG_PACKAGE_reaver is not set
-CONFIG_PACKAGE_wavemon=y
+# CONFIG_PACKAGE_wavemon is not set
 # CONFIG_PACKAGE_wifischedule is not set
 # CONFIG_PACKAGE_464xlat is not set
 CONFIG_PACKAGE_6in4=y
@@ -5390,7 +5438,7 @@ CONFIG_PACKAGE_adbyby=y
 # CONFIG_PACKAGE_batctl-full is not set
 # CONFIG_PACKAGE_batctl-tiny is not set
 # CONFIG_PACKAGE_beanstalkd is not set
-CONFIG_PACKAGE_bmon=y
+# CONFIG_PACKAGE_bmon is not set
 # CONFIG_PACKAGE_bwm-ng is not set
 # CONFIG_PACKAGE_chat is not set
 # CONFIG_PACKAGE_cifsmount is not set
@@ -5398,7 +5446,7 @@ CONFIG_PACKAGE_bmon=y
 # CONFIG_PACKAGE_conserver is not set
 # CONFIG_PACKAGE_cshark is not set
 # CONFIG_PACKAGE_daemonlogger is not set
-CONFIG_PACKAGE_darkstat=y
+# CONFIG_PACKAGE_darkstat is not set
 # CONFIG_PACKAGE_dhcpcd is not set
 # CONFIG_PACKAGE_dmapd is not set
 # CONFIG_PACKAGE_dnsforwarder is not set
@@ -5434,8 +5482,8 @@ CONFIG_PACKAGE_hostapd-common=y
 # CONFIG_PACKAGE_i2pd is not set
 # CONFIG_PACKAGE_ibrdtn-tools is not set
 # CONFIG_PACKAGE_ibrdtnd is not set
-CONFIG_PACKAGE_ifstat=y
-CONFIG_PACKAGE_iftop=y
+# CONFIG_PACKAGE_ifstat is not set
+# CONFIG_PACKAGE_iftop is not set
 # CONFIG_PACKAGE_iiod is not set
 # CONFIG_PACKAGE_iotivity is not set
 # CONFIG_PACKAGE_iotivity-cpp is not set
@@ -5464,7 +5512,7 @@ CONFIG_PACKAGE_ipt2socks=y
 # CONFIG_PACKAGE_iputils-tracepath6 is not set
 # CONFIG_PACKAGE_iputils-traceroute6 is not set
 CONFIG_PACKAGE_iw=y
-CONFIG_PACKAGE_iw-full=y
+# CONFIG_PACKAGE_iw-full is not set
 # CONFIG_PACKAGE_jool is not set
 # CONFIG_PACKAGE_jool-tools is not set
 # CONFIG_PACKAGE_keepalived is not set
@@ -5863,7 +5911,7 @@ CONFIG_PACKAGE_sysfsutils=y
 # CONFIG_PACKAGE_tio is not set
 # CONFIG_PACKAGE_tmux is not set
 CONFIG_PACKAGE_ttyd=y
-CONFIG_PACKAGE_wall=y
+# CONFIG_PACKAGE_wall is not set
 
 #
 # Virtualization
@@ -5899,7 +5947,7 @@ CONFIG_PACKAGE_sqlite3-cli=y
 # CONFIG_PACKAGE_adb is not set
 # CONFIG_PACKAGE_ap51-flash is not set
 # CONFIG_PACKAGE_at is not set
-CONFIG_PACKAGE_bandwidthd=y
+# CONFIG_PACKAGE_bandwidthd is not set
 # CONFIG_PACKAGE_bandwidthd-pgsql is not set
 # CONFIG_PACKAGE_bandwidthd-php is not set
 # CONFIG_PACKAGE_bandwidthd-sqlite is not set
