--- a/.config
+++ b/.config
@@ -210,28 +210,15 @@ CONFIG_TARGET_ROOTFS_SQUASHFS=y
 CONFIG_TARGET_SQUASHFS_BLOCK_SIZE=256
 CONFIG_TARGET_UBIFS_FREE_SPACE_FIXUP=y
 CONFIG_TARGET_UBIFS_JOURNAL_SIZE=""
-CONFIG_GRUB_IMAGES=y
+# CONFIG_GRUB_IMAGES is not set
 # CONFIG_EFI_IMAGES is not set
-CONFIG_GRUB_CONSOLE=y
-CONFIG_GRUB_SERIAL="ttyS0"
-CONFIG_GRUB_BAUDRATE=115200
-# CONFIG_GRUB_FLOWCONTROL is not set
-CONFIG_GRUB_BOOTOPTS=""
-CONFIG_GRUB_TIMEOUT="0"
-CONFIG_GRUB_TITLE="OpenWrt"
 # CONFIG_VDI_IMAGES is not set
-CONFIG_VMDK_IMAGES=y
-# CONFIG_VHD_IMAGES is not set
-# CONFIG_QCOW2_IMAGES is not set
-CONFIG_TARGET_IMAGES_PAD=y
+# CONFIG_VMDK_IMAGES is not set
 # CONFIG_TARGET_IMAGES_GZIP is not set
 
 #
 # Image Options
 #
-CONFIG_TARGET_KERNEL_PARTSIZE=16
-CONFIG_TARGET_ROOTFS_PARTSIZE=160
-CONFIG_TARGET_ROOTFS_PARTNAME=""
 
 #
 # Global build settings
@@ -4122,7 +4109,7 @@ CONFIG_PACKAGE_luci-app-autoreboot=y
 # CONFIG_PACKAGE_luci-app-bmx7 is not set
 # CONFIG_PACKAGE_luci-app-cifs-mount is not set
 # CONFIG_PACKAGE_luci-app-cifsd is not set
-CONFIG_PACKAGE_luci-app-cjdns=y
+# CONFIG_PACKAGE_luci-app-cjdns is not set
 # CONFIG_PACKAGE_luci-app-clamav is not set
 # CONFIG_PACKAGE_luci-app-commands is not set
 # CONFIG_PACKAGE_luci-app-cshark is not set
@@ -4143,9 +4130,9 @@ CONFIG_PACKAGE_luci-app-diskman=y
 CONFIG_PACKAGE_luci-app-filetransfer=y
 CONFIG_PACKAGE_luci-app-firewall=y
 CONFIG_PACKAGE_luci-app-flowoffload=y
-CONFIG_PACKAGE_luci-app-freifunk-diagnostics=y
-CONFIG_PACKAGE_luci-app-freifunk-policyrouting=y
-CONFIG_PACKAGE_luci-app-freifunk-widgets=y
+# CONFIG_PACKAGE_luci-app-freifunk-diagnostics is not set
+# CONFIG_PACKAGE_luci-app-freifunk-policyrouting is not set
+# CONFIG_PACKAGE_luci-app-freifunk-widgets is not set
 # CONFIG_PACKAGE_luci-app-frpc is not set
 # CONFIG_PACKAGE_luci-app-frps is not set
 # CONFIG_PACKAGE_luci-app-fwknopd is not set
@@ -4164,7 +4151,7 @@ CONFIG_PACKAGE_luci-app-hd-idle=y
 # CONFIG_PACKAGE_luci-app-mwan3 is not set
 # CONFIG_PACKAGE_luci-app-mwan3helper is not set
 # CONFIG_PACKAGE_luci-app-n2n_v2 is not set
-# CONFIG_PACKAGE_luci-app-netdata is not set
+CONFIG_PACKAGE_luci-app-netdata=y
 # CONFIG_PACKAGE_luci-app-nfs is not set
 CONFIG_PACKAGE_luci-app-nft-qos=y
 CONFIG_PACKAGE_luci-app-nlbwmon=y
@@ -4222,7 +4209,7 @@ CONFIG_PACKAGE_luci-app-upnp=y
 # CONFIG_PACKAGE_luci-app-v2ray-server is not set
 # CONFIG_PACKAGE_luci-app-verysync is not set
 CONFIG_PACKAGE_luci-app-vlmcsd=y
-CONFIG_PACKAGE_luci-app-vnstat=y
+# CONFIG_PACKAGE_luci-app-vnstat is not set
 # CONFIG_PACKAGE_luci-app-vpnbypass is not set
 CONFIG_PACKAGE_luci-app-vsftpd=y
 # CONFIG_PACKAGE_luci-app-watchcat is not set
@@ -4230,7 +4217,7 @@ CONFIG_PACKAGE_luci-app-vsftpd=y
 # CONFIG_PACKAGE_luci-app-wifischedule is not set
 # CONFIG_PACKAGE_luci-app-wireguard is not set
 CONFIG_PACKAGE_luci-app-wol=y
-CONFIG_PACKAGE_luci-app-wrtbwmon=y
+# CONFIG_PACKAGE_luci-app-wrtbwmon is not set
 CONFIG_PACKAGE_luci-app-xlnetacc=y
 # CONFIG_PACKAGE_luci-app-zerotier is not set
 
@@ -4412,31 +4399,6 @@ CONFIG_PACKAGE_luci-i18n-flowoffload-zh-cn=y
 # CONFIG_PACKAGE_luci-i18n-freifunk-ms is not set
 # CONFIG_PACKAGE_luci-i18n-freifunk-no is not set
 # CONFIG_PACKAGE_luci-i18n-freifunk-pl is not set
-# CONFIG_PACKAGE_luci-i18n-freifunk-policyrouting-ca is not set
-# CONFIG_PACKAGE_luci-i18n-freifunk-policyrouting-cs is not set
-# CONFIG_PACKAGE_luci-i18n-freifunk-policyrouting-de is not set
-# CONFIG_PACKAGE_luci-i18n-freifunk-policyrouting-el is not set
-# CONFIG_PACKAGE_luci-i18n-freifunk-policyrouting-en is not set
-# CONFIG_PACKAGE_luci-i18n-freifunk-policyrouting-es is not set
-# CONFIG_PACKAGE_luci-i18n-freifunk-policyrouting-fr is not set
-# CONFIG_PACKAGE_luci-i18n-freifunk-policyrouting-he is not set
-# CONFIG_PACKAGE_luci-i18n-freifunk-policyrouting-hu is not set
-# CONFIG_PACKAGE_luci-i18n-freifunk-policyrouting-it is not set
-# CONFIG_PACKAGE_luci-i18n-freifunk-policyrouting-ja is not set
-# CONFIG_PACKAGE_luci-i18n-freifunk-policyrouting-ms is not set
-# CONFIG_PACKAGE_luci-i18n-freifunk-policyrouting-no is not set
-# CONFIG_PACKAGE_luci-i18n-freifunk-policyrouting-pl is not set
-# CONFIG_PACKAGE_luci-i18n-freifunk-policyrouting-pt is not set
-# CONFIG_PACKAGE_luci-i18n-freifunk-policyrouting-pt-br is not set
-# CONFIG_PACKAGE_luci-i18n-freifunk-policyrouting-ro is not set
-# CONFIG_PACKAGE_luci-i18n-freifunk-policyrouting-ru is not set
-# CONFIG_PACKAGE_luci-i18n-freifunk-policyrouting-sk is not set
-# CONFIG_PACKAGE_luci-i18n-freifunk-policyrouting-sv is not set
-# CONFIG_PACKAGE_luci-i18n-freifunk-policyrouting-tr is not set
-# CONFIG_PACKAGE_luci-i18n-freifunk-policyrouting-uk is not set
-# CONFIG_PACKAGE_luci-i18n-freifunk-policyrouting-vi is not set
-CONFIG_PACKAGE_luci-i18n-freifunk-policyrouting-zh-cn=y
-# CONFIG_PACKAGE_luci-i18n-freifunk-policyrouting-zh-tw is not set
 # CONFIG_PACKAGE_luci-i18n-freifunk-pt is not set
 # CONFIG_PACKAGE_luci-i18n-freifunk-pt-br is not set
 # CONFIG_PACKAGE_luci-i18n-freifunk-ro is not set
@@ -4473,6 +4435,7 @@ CONFIG_PACKAGE_luci-i18n-freifunk-zh-cn=y
 # CONFIG_PACKAGE_luci-i18n-hd-idle-vi is not set
 CONFIG_PACKAGE_luci-i18n-hd-idle-zh-cn=y
 # CONFIG_PACKAGE_luci-i18n-hd-idle-zh-tw is not set
+CONFIG_PACKAGE_luci-i18n-netdata-zh-cn=y
 # CONFIG_PACKAGE_luci-i18n-nft-qos-es is not set
 CONFIG_PACKAGE_luci-i18n-nft-qos-zh-cn=y
 # CONFIG_PACKAGE_luci-i18n-nft-qos-zh-tw is not set
@@ -4559,31 +4522,6 @@ CONFIG_PACKAGE_luci-i18n-unblockmusic-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-upnp-zh-cn=y
 # CONFIG_PACKAGE_luci-i18n-upnp-zh-tw is not set
 CONFIG_PACKAGE_luci-i18n-vlmcsd-zh-cn=y
-# CONFIG_PACKAGE_luci-i18n-vnstat-ca is not set
-# CONFIG_PACKAGE_luci-i18n-vnstat-cs is not set
-# CONFIG_PACKAGE_luci-i18n-vnstat-de is not set
-# CONFIG_PACKAGE_luci-i18n-vnstat-el is not set
-# CONFIG_PACKAGE_luci-i18n-vnstat-en is not set
-# CONFIG_PACKAGE_luci-i18n-vnstat-es is not set
-# CONFIG_PACKAGE_luci-i18n-vnstat-fr is not set
-# CONFIG_PACKAGE_luci-i18n-vnstat-he is not set
-# CONFIG_PACKAGE_luci-i18n-vnstat-hu is not set
-# CONFIG_PACKAGE_luci-i18n-vnstat-it is not set
-# CONFIG_PACKAGE_luci-i18n-vnstat-ja is not set
-# CONFIG_PACKAGE_luci-i18n-vnstat-ms is not set
-# CONFIG_PACKAGE_luci-i18n-vnstat-no is not set
-# CONFIG_PACKAGE_luci-i18n-vnstat-pl is not set
-# CONFIG_PACKAGE_luci-i18n-vnstat-pt is not set
-# CONFIG_PACKAGE_luci-i18n-vnstat-pt-br is not set
-# CONFIG_PACKAGE_luci-i18n-vnstat-ro is not set
-# CONFIG_PACKAGE_luci-i18n-vnstat-ru is not set
-# CONFIG_PACKAGE_luci-i18n-vnstat-sk is not set
-# CONFIG_PACKAGE_luci-i18n-vnstat-sv is not set
-# CONFIG_PACKAGE_luci-i18n-vnstat-tr is not set
-# CONFIG_PACKAGE_luci-i18n-vnstat-uk is not set
-# CONFIG_PACKAGE_luci-i18n-vnstat-vi is not set
-CONFIG_PACKAGE_luci-i18n-vnstat-zh-cn=y
-# CONFIG_PACKAGE_luci-i18n-vnstat-zh-tw is not set
 CONFIG_PACKAGE_luci-i18n-vsftpd-zh-cn=y
 # CONFIG_PACKAGE_luci-i18n-wol-ca is not set
 # CONFIG_PACKAGE_luci-i18n-wol-cs is not set
@@ -4610,7 +4548,6 @@ CONFIG_PACKAGE_luci-i18n-vsftpd-zh-cn=y
 # CONFIG_PACKAGE_luci-i18n-wol-vi is not set
 CONFIG_PACKAGE_luci-i18n-wol-zh-cn=y
 # CONFIG_PACKAGE_luci-i18n-wol-zh-tw is not set
-CONFIG_PACKAGE_luci-i18n-wrtbwmon-zh-cn=y
 
 #
 # Mail
